====== 12
* Fixed yet another major bug.

====== 11
* Fixed major bug.

====== 10
* Updated for The Iron Tide.

====== 9
* Updated for Siege of Ogrimmar.

====== 8
* Updated for patch 5.3: Escalation.

====== 7
* Updated for patch 5.2: The Thunder King

====== 6.1
* Removed unnecessary files increasing download space.

====== 6
* Updated for patch 5.1: Landfall!

====== 5
* Updated for Mists of Pandaria

====== 4
* Now uses the new Masque API,  making it much more stable and have smaller download

====== 3
* Updated for WoW 4.3
* Now should work with the guild bank

====== 2
* Should now work when Masque and other addons that support ButtonFacade are enabled (although the problem is not from my end)
* Still does not work with the guild bank

====== 1
* Initial release