@@ -1,3 +1,6 @@
+====== 13
+* Updated for latest Bagnon version.
+
 ====== 12
 * Fixed yet another major bug.
 
